# cup

./: CMakeLists.txt  LICENSE  README.md
Foundation/: Application.cpp  Application.h  CMakeLists.txt  Logger.cpp  Logger.h
Foundation/Memory/: GarbageCollector.cpp  GarbageCollector.h  ImmutableString.cpp  ImmutableString.h  MemoryPool.cpp  MemoryPool.h  Types.h
Test/: CMakeLists.txt  main.cpp
